[project]
name = "zenbase"
version = "0.1.0"
description = "LLMs made Zen"
authors = [{ name = "Cyrus Nouroozi", email = "cyrus@zenbase.ai" }]
dependencies = [
    "sorcery>=0.2.2",
    "pksuid>=1.1.2",
    "metadict>=0.1.3",
    "pydantic>=2.7.3",
    "faker>=25.4.0",
    "anyio>=4.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["helpers"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.6",
    "langsmith>=0.1.65",
    "pyright>=1.1.365",
    "datasets>=2.19.1",
    "ipython>=8.24.0",
    "ipdb>=0.13.13",
    "openai>=1.30.5",
    "pytest-recording>=0.13.1",
    "python-dotenv>=1.0.1",
    "vcrpy>=6.0.1",
    "arize-phoenix[evals]>=4.2.4",
    "nest-asyncio>=1.6.0",
    "langchain-openai>=0.1.8",
    "langchain-core>=0.2.3",
    "langchain>=0.2.1",
    "parea-ai>=0.2.164",
    "langfuse>=2.33.1",
    "lunary>=1.0.30",
    "autoevals>=0.0.68",
    "braintrust>=0.0.131",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zenbase"]
